--- a/index.html
+++ b/index.html
@@ -77,6 +77,18 @@
         flex-wrap: wrap;
         justify-content: space-between;
       }
+     
+    .image-container {
+      width: 100%;
+      max-width: 500px; /* 设置图片容器的最大宽度 */
+      text-align: center; /* 居中显示图片 */
+    }
+
+    .image-container img {
+      max-width: 100%;
+      height: auto;
+    }
+ 
     </style>
   </head>
   <body>
@@ -107,7 +119,9 @@
     <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </header>
       <section>
+        <div class="image-container">
       <img src="wangjing_photo.jpg"  alt="Jing Wang"></h3>
+          </div>
       <p>I am currently an doctoral student of <a href="http://www.ou.edu/cas/economics">Management</a> at <a href="https://www.acem.sjtu.edu.cn/">Antai College of Economics and Management, Shanghai Jiao Tong University</a>. I graduated with a BS in Economics from Lanzhou University in July 2024.</p>
       <p>My research interests include corporate finance, analytical accounting, and corporate governance.
       </section>
