--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
       }
      
     .image-container {
-      width: 20%;
-      max-width: 200px; /* 设置图片容器的最大宽度 */
+      width: 100%;
+      max-width: 250px; /* 设置图片容器的最大宽度 */
       text-align: center; /* 居中显示图片 */
     }
 
@@ -120,7 +120,7 @@
       </header>
       <section>
         <div class="image-container">
-      <img src="wangjing_photo.jpg"  alt="Jing Wang"></h3>
+      <img src="wangjing_photo.jpg"  alt="Jing Wang"  width="50%"></h3>
           </div>
       <p>I am currently an doctoral student of <a href="http://www.ou.edu/cas/economics">Management</a> at <a href="https://www.acem.sjtu.edu.cn/">Antai College of Economics and Management, Shanghai Jiao Tong University</a>. I graduated with a BS in Economics from Lanzhou University in July 2024.</p>
       <p>My research interests include corporate finance, analytical accounting, and corporate governance.
