--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <div class="image-container">
       <img src="wangjing_photo.jpg"  alt="Jing Wang"  width="50%"></h3>
           </div>
-      <p>I am currently an doctoral student of <a href="http://www.ou.edu/cas/economics">Management</a> at <a href="https://www.acem.sjtu.edu.cn/">Antai College of Economics and Management, Shanghai Jiao Tong University</a>. I graduated with a BS in Economics from Lanzhou University in July 2024.</p>
+      <p>I am currently an doctoral student of Accounting and Corporate Governance at <a href="https://www.acem.sjtu.edu.cn/en/"> Antai College of Economics and Management</a>, <a href="https://en.sjtu.edu.cn/">Shanghai Jiao Tong University</a>. I graduated with a BS in Economics from Lanzhou University in July 2024.</p>
       <p>My research interests include corporate finance, analytical accounting, and corporate governance.
       </section>
     </div>
