--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         </div>
         <br>
 
-    <p><b>Contact:</b><br>Department of Economics<br>University of Oklahoma<br>322 CCD1, 308 Cate Center Drive<br>Norman, OK 73072</p>
+    <p><b>Contact:</b><br>Antai College of Economics and Management<br>Shanghai Jiao Tong University<br>1954 Huashan Road, Shanghai, China<br>wangjing20@163.com<br>leifwj20@gmail.com</p>
     <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </header>
       <section>
